fix: Arreglando code smells